Refactor Makefile and update pyproject.toml for improved linting and formatting

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,5 +42,10 @@ target-version = "py311"
 select = ["E", "F", "B"]
 ignore = ["E501"]
 
+[tool.isort]
+profile = "black"
+line_length = 88
+known_first_party = ["app"]
+
 [tool.ruff.format]
 docstring-code-format = true
