Refactor Makefile and update dependencies in pyproject.toml, requirements.txt, and requirements-dev.txt for improved project structure and functionality

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,38 +1,48 @@
-[project]
-name = "kugify"
-version = "0.1.0"
-description = "My FastAPI backend for kugify"
-authors = [
-  { name="Vlad", email="vladys.amigo97@gmail.com" }
-]
-
-dependencies = [
-  "fastapi[standard]",
-  "uvicorn[standard]",
-  "sqlalchemy",
-  "python-dotenv",
-  "email-validator",
-  "sqlmodel"
-]
-
-[project.optional-dependencies]
-dev = [
-  "black",
-  "ruff",
-  "pytest",
-  "httpx",
-  "isort",
-  "mypy",
-  "watchfiles"
-]
-
 [build-system]
 requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
+[project]
+name = "kugify"
+version = "0.1.0"
+description = "FastAPI backend for Kugify"
+authors = [
+  { name="Vlad", email="vladys.amigo97@gmail.com" }
+]
+requires-python = ">=3.11"
+
+# ── Production dependencies ────────────────────────────────────
+dependencies = [
+  "fastapi[standard]",
+  "uvicorn[standard]",
+  "sqlalchemy",
+  "asyncpg",
+  "python-dotenv",
+  "email-validator",
+  "sqlmodel",
+]
+
+[project.optional-dependencies]
+# ── Development dependencies ───────────────────────────────────
+dev = [
+  "alembic",
+  "black",
+  "isort",
+  "ruff",
+  "mypy",
+  "pytest",
+  "httpx",
+  "watchfiles",
+]
+
+# ── Tool configuration ────────────────────────────────────────
+
 [tool.black]
 line-length = 88
 target-version = ["py311"]
+
+[tool.isort]
+profile = "black"
 
 [tool.ruff]
 line-length = 88
@@ -42,10 +52,10 @@ target-version = "py311"
 select = ["E", "F", "B"]
 ignore = ["E501"]
 
-[tool.isort]
-profile = "black"
-line_length = 88
-known_first_party = ["app"]
-
 [tool.ruff.format]
 docstring-code-format = true
+
+[tool.pytest.ini_options]
+minversion = "7.0"
+addopts = "-ra -q"
+testpaths = ["tests"]
