--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ anyio==4.9.0
     #   httpx
     #   starlette
     #   watchfiles
+asyncpg==0.30.0
+    # via kugify (pyproject.toml)
 certifi==2025.6.15
     # via
     #   httpcore
