--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -9,10 +9,11 @@ on:
 jobs:
   check:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up Python
+      - name: Set up Python 3.12
         uses: actions/setup-python@v4
         with:
           python-version: '3.12'
