--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -17,6 +17,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.12'
+          
+      - name: Install uv
+        run: pip install uv
 
       - name: Install dev dependencies
         run: make install
