--- a/charts/kugify/templates/service.yaml
+++ b/charts/kugify/templates/service.yaml
@@ -1,15 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "kugify.fullname" . }}
-  labels:
-    {{- include "kugify.labels" . | nindent 4 }}
+  name: {{ .Chart.Name }}
 spec:
   type: {{ .Values.service.type }}
+  selector:
+    app: {{ .Chart.Name }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
-  selector:
-    {{- include "kugify.selectorLabels" . | nindent 4 }}
+      targetPort: 8000
+      nodePort: {{ .Values.service.nodePort }}
