--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -49,8 +49,8 @@ jobs:
       - name: Run pytest
         run: make test
 
-      - name: Helm lint
-        run: helm lint charts/kugify
+      # - name: Helm lint
+      #   run: helm lint charts/kugify
 
       - name: Helm template
         run: helm template kugify charts/kugify --values charts/kugify/values.yaml
