--- a/charts/kugify/templates/deployment.yaml
+++ b/charts/kugify/templates/deployment.yaml
@@ -18,3 +18,6 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - containerPort: 8000
+          envFrom:
+            - secretRef:
+                name: {{ .Values.envFromSecret }}
